styles/globals.scss
/* ... */
.input-search:focus {
  border: 1px solid rgba(255, 255, 255, .5);
  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
}

.search-icon {
  pointer-events: none;
  z-index: 999;
}

.search-box {
  // width: 250px;
  z-index: 9999;
}
.search-icon path {
  fill: #001a71;
}

.header:hover .search-icon path {
  fill: #fff;
}

.input-search:focus + .search-icon path{
  fill: #001A71;
}
.category-card .tab input[type=checkbox]{
  display: none;
}

.category-card .tab-label:after {
  content: "+";
  // background-image: url('../public/images/plus.svg');
  width: 24px;
  height: 24px;
  text-align: center;
  transition: all 1s;
  color: #001a71;
  font-size: 30px;
  display: flex;
  align-items: flex-end;
  justify-content: flex-end;
}

.category-card .tab input:checked + .tab-label:after {
  content: "";
  background-image: url('../public/images/minus.svg');
  width: 24px;
  height: 24px;
  text-align: center;
  transition: all 1s;
  color: #001a71;
  font-size: 30px;
  display: flex;
  align-items: flex-end;
  justify-content: flex-end;
}

.table-container{
  p{
    a{
      span{
        text-decoration: underline;
        color: #001A71;
      }
    }
  }
}


/** health needs Mobile carousel style **/

.carousel-controls {
  .left-btn, .right-btn {
    background-image: url('../public/images/product-carousel-left.svg');
    width: 48px;
    height: 48px;
    background-position: center;
    background-repeat: no-repeat;
  }
  .right-btn {
    background-image: url('../public/images/product-carousel-right.svg');
  }
}
.para-ellipsis-3 {
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical; 
  @media screen and (max-width: 1023px) {
    -webkit-line-clamp: 4;
  }
}
.faq-box{
  p{
    margin-bottom: 4px;
    a{
      text-decoration: underline;
    }
  }
}

/*** search results accordion style ***/
.search-results {
  .mck-hn-accordion-title-check {
    display: none;
  }
  .filter-title {
    color: #001a71;
    font-weight: 800;
    font-family: "sofia-pro-bold";
    font-size: 16px;
    line-height: 24px;
  }
  .tab-label {
    display: flex;
    align-items: end;
  }
  .tab-content {
    margin: 0;
  }
  .filter-title {
    @media screen and (max-width: 1023px) {
      position: relative;
      z-index: -1;
    }
  }
  .tab input:checked ~ .tab-content {
    @media screen and (max-width: 1023px) {
      padding-top: 0;
    }
  }
  .mck-filter-clearall-icon{
    width: 12px;
    margin-right: 8px;
  }
}

.text-oneline-ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}
.text-heading-ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.text-p-ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

.text-horiz-ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: horizontal;
}

.text-content-ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
}

.text-sixcontent-ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 6;
  -webkit-box-orient: vertical;
}

@media (max-width: 968px) {
  .text-oneline-ellipsis,.text-heading-ellipsis, .text-p-ellipsis, .text-content-ellipsis, .text-sixcontent-ellipsis {
      -webkit-line-clamp: unset;
  }
}
@media (max-width: 576px) {
  .text-p-ellipsis{
      -webkit-line-clamp: 3;
  }
}
.textoverflow-scroll::-webkit-scrollbar {
  width: 7px
}

.textoverflow-scroll::-webkit-scrollbar-track {
  background: #d7d7d7;
  border-top-right-radius: 28px;
  border-bottom-right-radius: 26px;
}

.textoverflow-scroll::-webkit-scrollbar-thumb {
  height: 38px;
  background: #4b4f54;
}

.textoverflow-scroll::-webkit-scrollbar-thumb:hover {
  background: #4b4f54;
}


//Contactus page override for dynamic react value html  -- 129044
.contact-container .contact-body.mck-contact p {
  margin-top: 0;
}
.contact-container .contact-body.mck-contact p a span {
  font-family: "sofia-pro-regular";
}
//PDP-images block center
.pdp_images {
  @media screen and (max-width: 1023px) {
    justify-content: center;
    ul {
      li {
        img {
          height: 4rem;
          width: 2.125rem;
        }
      }
    }
  }
}

//where to buy Scroll
.location-box{
  
}
.location-box::-webkit-scrollbar {
  width: 15px;
  border: solid 0.5px #808CB8;
  border-radius: 6px;
  @media screen and (max-width: 1023px) {
      padding-right: -16px;
      left: -10px;
      position: absolute;
  }
}

.location-box::-webkit-scrollbar-thumb {
  height: 248px;
  background: #CCD1E3;
  border-radius: 6px;
}
.location-box::-webkit-scrollbar-thumb:hover {
  background: #CCD1E3;
}

video{
  border-radius: 10px;
  margin: 0px auto;
}
// .blog-details-container img{
//   margin: auto;
// }
.category-card label{
  color: #001a71;
    font-weight: 800;
    font-family: "sofia-pro-bold";
    font-size: 16px;
    line-height: 24px;
}
.category-card .tab-content{
  color: #001a71;
    font-weight: 800;
    font-family: "sofia-pro-regular";
    font-size: 16px;
    line-height: 24px;
}

@media (max-width: 980px) and (min-width:768px) {
  .text-xs {
    font-size: 0.875rem; /* 14px */
  }
  .text-sm {
    font-size: 1rem; /* 16px */
  }
  .text-base { 
    font-size: 1.125rem; /* 18px */
  }
  .text-lg {
    font-size: 1.25rem; /* 20px */
  }
  .text-xl {
    font-size: 1.5rem; /* 24px */
  }
}

@media screen and (min-width: 1024px) {
  .swiper-button-next, .swiper-button-prev {
    top: var(--swiper-navigation-top-offset,47.5%) !important;
  }
  .swiper-pagination-fraction {
    bottom: 66px !important;
  }
  .swiper {
    position: inherit !important;
  }
}
/* ... */

